--- a/Demo/app/partials/partial1.html
+++ b/Demo/app/partials/partial1.html
@@ -1,22 +1,47 @@
-<p>This is the partial for view 1.</p>
-
-<div class="drag_gutter">
-     <h1>Drag 'em</h1>
-     <div class="box_floating" ng-repeat="obj in draggableObjects" ng-drag="true" ng-drag-data="obj">
-          <h2>{{obj.name}}</h2>
-          <h3>{{obj.index}}</h3>
-     </div>
-</div>
-
-<div class="drag_gutter">
-     <h1>Drop 'em</h1>
-     <div class="drop_zone" ng-drop="true" ng-drop-success="onDropComplete1($data,$event)">
-
-          <div class="box_floating" ng-repeat="obj in droppedObjects1" ng-drag="true" ng-drag-data="obj" ng-drag-success="onDragSuccess1($data,$event)">
+<div class="drag_gutter" ng-controller="Area1Ctrl">
+     <h1>Area 1</h1>
+     <div class="drop_zone" ng-drop="true" ng-drop-success="DropInComplete($data,$event)">
+          <span ng-show="areaObjects.length < 1">Now drag an object into this space</span>
+          <div class="draggable_box" ng-repeat="obj in areaObjects" ng-drag="true" ng-drag-data="obj" ng-drag-success="DragAwaySuccess($data,$event)">
                <h2>{{obj.name}}</h2>
                <h3>{{obj.index}}</h3>
           </div>
           <div style="clear: both;"></div>
      </div>
+</div>
 
+<div class="drag_gutter" ng-controller="Area2Ctrl">
+     <h1>Area 2</h1>
+     <div class="drop_zone" ng-drop="true" ng-drop-success="DropInComplete($data,$event)">
+          <span ng-show="areaObjects.length < 1">Drag an object into this space</span>
+          <div class="draggable_box" ng-repeat="obj in areaObjects" ng-drag="true" ng-drag-data="obj" ng-drag-success="DragAwaySuccess($data,$event)">
+               <h2>{{obj.name}}</h2>
+               <h3>{{obj.index}}</h3>
+          </div>
+          <div style="clear: both;"></div>
+     </div>
+</div>
+
+<div class="drag_gutter" ng-controller="Area3Ctrl">
+     <h1>Area 3</h1>
+     <div class="drop_zone" ng-drop="true" ng-drop-success="DropInComplete($data,$event)">
+          <span ng-show="areaObjects.length < 1">Drag an object into this space</span>
+          <div class="draggable_box" ng-repeat="obj in areaObjects" ng-drag="true" ng-drag-data="obj" ng-drag-success="DragAwaySuccess($data,$event)">
+               <h2>{{obj.name}}</h2>
+               <h3>{{obj.index}}</h3>
+          </div>
+          <div style="clear: both;"></div>
+     </div>
+</div>
+
+<div class="drag_gutter" ng-controller="Area4Ctrl">
+     <h1>Area 4</h1>
+     <div class="drop_zone" ng-drop="true" ng-drop-success="DropInComplete($data,$event)">
+          <span ng-show="areaObjects.length < 1">Drag an object into this space</span>
+          <div class="draggable_box" ng-repeat="obj in areaObjects" ng-drag="true" ng-drag-data="obj" ng-drag-success="DragAwaySuccess($data,$event)">
+               <h2>{{obj.name}}</h2>
+               <h3>{{obj.index}}</h3>
+          </div>
+          <div style="clear: both;"></div>
+     </div>
 </div>
