--- a/Demo/app/scss/app.scss
+++ b/Demo/app/scss/app.scss
@@ -14,30 +14,57 @@ $debug: true;
 $debugBlue: blue;
 $debugGreen: green;
 
+
+html{
+     height: 100vh;
+     width:100vh;
+}
+
+
 html, body {
      margin: 0;
      padding: 0;
-     height: 100vh;
+     height:100%;
+     width:100%;
      @include box-sizing(border-box);
 }
 
-
-.box_floating{   
-     text-align: center;
-     width:250px;
-     height:250px;
-     display: inline-block;
-     margin:10px;
-     @include linear-gradient(blue, gray);
-     @include box-shadow(8px, 8px, 8px, black, 0, null, 8px );
+header{
+     .menu{
+          li{
+               display: inline-block;
+               margin-right: 10px
+          }
+     }
+     border-bottom: #000 1px solid;
+     margin-bottom: 10px;
 }
+
+.main_container {
+     min-height: 100%;
+     margin-bottom: -200px;
+     position: relative;
+}
+
+.clearfooter {
+     height: 200px;
+     clear: both;
+}
+
+footer{
+     height: 200px;
+     margin-top:15px;
+     position: relative;
+     text-align: center;
+     border-top: #000 1px solid;
+}
+
 
 
 .drop_zone{
      text-align: center;
      width:100%;
-     min-height: 50%;
-     height:100%;
+     min-height: 250px;
      background-color: #669900;
      padding-bottom: 10px;
      padding-top: 10px;
@@ -46,13 +73,24 @@ html, body {
 .drag_gutter{
      vertical-align: top;
      width: 40%;
-     height:100vh;
+     min-height: 350px;
+     max-height:700px;
      display: inline-block;
-/*     overflow: hidden;*/
+     /*     overflow: hidden;*/
+     margin-top:20px;;
      margin-right: 50px;
      margin-left: 50px;
-     padding: 15px;
-     
+     padding: 15px;   
      @include box-shadow(5px, 5px, 5px, #058910, 0, null, 5px );
 
+}
+
+.draggable_box{   
+     text-align: center;
+     width:250px;
+     height:250px;
+     display: inline-block;
+     margin:10px;
+     @include linear-gradient(blue, gray);
+     @include box-shadow(8px, 8px, 8px, black, 0, null, 8px );
 }
